--- a/02/Jesus_Marcos/Jesus_Marcos_Tarea_2.html
+++ b/02/Jesus_Marcos/Jesus_Marcos_Tarea_2.html
@@ -1,13 +1,10 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="es">
- 
 <head>
-<title>Yes we can - Tarea 2</title>
-<meta charset="utf-8" />
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-<link rel="alternate" title="Pozolería RSS" type="application/rss+xml" href="/feed.rss" />
+	<meta charset="utf-8">
+	<title>Yes we can - Tarea 2</title>
+	<script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 </head>
- 
 <body>
     <header>
        <h1>Yes we can - Tarea 2</h1>
@@ -23,7 +20,7 @@
         Mirai 2013 - Yes we can
     </footer>
 	<script type="text/javascript">
-		console.log("La versión de jQuery que estoy utilizando es jQuery v2.0.0 | (c) 2005, 2013 jQuery Foundation, Inc. Muchas gracias por tu atención, hasta la próxima.");
+		console.log('La versión de jQuery que estoy utilizando es ' + jQuery.fn.jquery)
 	</script>
 </body>
 </html>
