--- a/03/Estef/index.html
+++ b/03/Estef/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Tarea 3 - Formulario con HTML5</title>
 	<link rel="stylesheet" media="screen" href="style.css" >
+	<script src="http://code.jquery.com/jquery-2.0.0.js"></script>
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -45,7 +46,6 @@
 						</p>
 
 						<button class="submit" type="submit" id="send">Enviar</button>
-
 						
 					</form>			
 					
@@ -53,7 +53,15 @@
 			</section>
 			
 			<footer>
-
+				<script type="text/javascript">
+					$(document).ready(function()
+					{
+						$("#send").click(function() {
+							var userName = $("#nombre").val();
+							alert('Enhorabuena ' + userName + '!' + ' ' + 'Te has suscrito correctamente a nuestra Newsletter');
+						});
+					});
+				</script>
 			</footer>	
 		</div>
 	</body>
