--- a/03/Lau/formulario-valido.html
+++ b/03/Lau/formulario-valido.html
@@ -4,7 +4,11 @@
 <meta charset="UTF-8">
 <meta name="description" content="Tareas con Github">
 <title="Un formulario chulo en HTML5"></title>
-<link rel="stylesheet" type="text/css" href="styles2.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script type="text/javascript" src="script.js"></script>
+
+
 </head>
 <body>
     <section>
