Editar título de la página

--- a/03/Estef/index.html
+++ b/03/Estef/index.html
@@ -18,7 +18,7 @@
 			
 			<section>
 				<header>
-					<h2>Necesitamos tus datos:</h2>
+					<h2>Y no te pierdas nada sobre iPad Mini</h2>
 				</header>
 				<article>
 						
