Remove default submit action
Remove default submit action and show simple message

--- a/03/Jsdiez/gana_una_chocolatina.html
+++ b/03/Jsdiez/gana_una_chocolatina.html
@@ -19,7 +19,7 @@
 		<button class="call_form" role="button">Suscribete</button> 
     </header>
     <div id="content"> 
-		<form action="#">
+		<form id="chocoForm" action="tu_chocolatina.html">
 			<fieldset>
 				<label for="form_name">Nombre:</label>
 				<input id="form_name" name="form_name" type="text" class="required" required autofocus placeholder="Nombre">
