Fixear error que evitaba que el formulario se enviase

--- a/04/Estefi/index.html
+++ b/04/Estefi/index.html
@@ -21,7 +21,7 @@
 				<br />
 
 				<input name="submit" id="submit" type="submit" value="Enviar" /> 
-				<!--<input name="reset" id="reset" type="reset" value="Limpiar datos" />-->
+				<input name="reset" id="reset" type="reset" value="Limpiar datos" />
 			</fieldset>
 		</form>  
 	</div>
