Añadir enlace de vuelta al form

--- a/04/Jesus_Marcos/respuesta.html
+++ b/04/Jesus_Marcos/respuesta.html
@@ -31,6 +31,8 @@
 						}
 						
 						getURLParams()
+						
+
 						var tunombre = document.getElementById("tunombre");
 						var tuapellidos = document.getElementById("tuapellidos");
 						var tupoblacion = document.getElementById("tupoblacion");
@@ -41,6 +43,7 @@
 					});
 			</script> 
 			<p class="labase">Hemos almacenado tus datos en nuestra base.</p>
+			<a href="form.html" title="Volver al formulario" class="volver">Volver al formulario</a>
 		</div>
 	</body>
 </html>
