Mostrar datos del formulario en la respuesta
Y mejorar estructura de código en index.html, css y respuesta.html

--- a/04/Estefi/respuesta.html
+++ b/04/Estefi/respuesta.html
@@ -1,13 +1,24 @@
 ﻿<html>
 <head>
 	<title>Respuesta Formularien con Jqueryen</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Life+Savers:400,700' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-2.0.0.js"></script>
-	
+	<script src="js/answer.js"></script>
+
 </head>
 <body>
 
-	<div id="container">
-		<h2>Yujuuuuuuuuuu!!!! El formularien se envió correctamenteennn</h2>
+	<div id="container" class="answer-page">
+		<h2>Yujuuuuuuuuuu!!!!</h2>
+		<h3>El formularien se envió correctamenteennn</h3>
+		<img src="images/partyhard.gif" />
+		
+		<h4>Estos son los datos que nos has enviado:</h4>
+		<ul>
+			<li></li>
+		</ul>
 	</div>
 
 	<div id="footer">	</div>
