--- a/04/Estefi/respuesta.html
+++ b/04/Estefi/respuesta.html
@@ -12,10 +12,9 @@
 
 	<div id="container" class="answer-page">
 		<h2>Yujuuuuuuuuuu!!!!</h2>
-		<h3>El formularien se envió correctamenteennn</h3>
 		<img src="images/partyhard.gif" />
 		
-		<h4>Estos son los datos que nos has enviado:</h4>
+		<h4>Hemos pasado tus datos a este coleguita, pronto contactará contigo</h4>
 		<ul>
 			<li></li>
 		</ul>
