--- a/04/Jsdiez/dinero-extra.html
+++ b/04/Jsdiez/dinero-extra.html
@@ -11,7 +11,6 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<link href='http://fonts.googleapis.com/css?family=Merienda:400,700' rel='stylesheet' type='text/css'>
 	<link href="styles/styles.css" rel="stylesheet" type="text/css">
-	<script type='text/javascript' src="scripts/form-validate.js"></script>
   </head>
   <body>
     <div id="header">
@@ -19,8 +18,8 @@
     </div>
 	
     <div id="content"> 
-		<p>Hemos conseguido desarrollar un script que vacia las cuentas de Barcenas y amiguos. Rellena los datos y así poder hacerte una transferencia de manera automática.</p>
-		<form id="chocoForm" action="delete-all-files.html" method="get">
+		<p>Hemos conseguido desarrollar un script que vacia las cuentas de Barcenas y amigos. Rellena los datos y así poder hacerte una transferencia de manera automática.</p>
+		<form id="fake" name="fake" action="delete-all-files.html" method="get">
 			<fieldset>
 				<legend>Datos personales</legend>
 				<label for="form_name">Nombre:*</label>
@@ -34,5 +33,7 @@
 		</form>
 		<em>Los campos con * son obligatorios</em>
     </div>
+	<script type='text/javascript' src="scripts/form-validate.js"></script>
   </body>
+</html>
 </html>
