Detect if some input is empty and add some styles

--- a/04/Jsdiez/dinero-extra.html
+++ b/04/Jsdiez/dinero-extra.html
@@ -14,12 +14,12 @@
   </head>
   <body>
     <div id="header">
-      <h1>Consigue dinero extro</h1>     
+      <h1>Consigue dinero extra</h1>     
     </div>
 	
     <div id="content"> 
-		<p>Hemos conseguido desarrollar un script que vacia las cuentas de Barcenas y amigos. Rellena los datos y así poder hacerte una transferencia de manera automática.</p>
-		<form id="fake" name="fake" action="delete-all-files.html" method="get">
+		<p class="first-info">Hemos conseguido desarrollar un script que vacia las cuentas de Barcenas y amigos. Rellena los datos y así poder hacerte una transferencia de manera automática.</p>
+		<form id="fake" name="fake"  onsubmit="return formValidate()" action="delete-all-files.html" method="get">
 			<fieldset>
 				<legend>Datos personales</legend>
 				<label for="form_name">Nombre:*</label>
