Get empty inputs and show through alert

--- a/04/Jsdiez/dinero-extra.html
+++ b/04/Jsdiez/dinero-extra.html
@@ -23,11 +23,11 @@
 			<fieldset>
 				<legend>Datos personales</legend>
 				<label for="form_name">Nombre:*</label>
-				<input id="form_name" name="form_name">
+				<input id="form_name" name="Nombre">
 				<label for="form_age">Apellidos:*</label>
-				<input id="form_age" name="form_age">
+				<input id="form_age" name="Apellidos">
 				<label for="form_location">Población:*</label>
-				<input id="form_location" name="form_location">
+				<input id="form_location" name="Población">
 			</fieldset>
 			<input type="submit" class="send_form" value="Enviar">
 		</form>
