--- a/04/Estefi/index.html
+++ b/04/Estefi/index.html
@@ -9,19 +9,35 @@
 <body>
 
 	<div id="container">
+	
+	<div class="msg-box-top">
+		<h2>Lo siento, te falta por rellenar:</h2>
+		<ul>
+			<li class="text1"></li>
+			<li class="text2"></li>
+			<li class="text3"></li>
+		</ul>
+	</div>
+	
 		<form name="formulario" id="formulario" class="formulario" action="respuesta.html" method="get">  
 			<fieldset>
-				<label>Nombre <span>(*)</span></label>  
-				<input name="nombre" id="nombre" class="text-label" type="text" />
-				<span class="msg-name error-msg">Ey! Tienes que rellenar el nombre para poder continuar</span>
+				<div class="nameBox">
+					<label>Nombre <span>(*)</span></label>  
+					<input name="nombre" id="nombre" class="text-label" type="text" />
+					<span class="msg-name error-msg">Ey! Tienes que rellenar el nombre para poder continuar</span>
+				</div>
 				<div class="clear"></div>
-				<label>Apellidos <span>(*)</span></label>  
-				<input name="apellidos" id="apellidos" class="text-label" type="text" /> 
-				<span class="msg-lastname error-msg">Ey! Tienes que rellenar los apellidos para poder continuar</span>
+				<div class="lastnameBox">
+					<label>Apellidos <span>(*)</span></label>  
+					<input name="apellidos" id="apellidos" class="text-label" type="text" /> 
+					<span class="msg-lastname error-msg">Ey! Tienes que rellenar los apellidos para poder continuar</span>
+				</div>
 				<div class="clear"></div>
-				<label>Localidad <span>(*)</span></label>  
-				<input name="localidad" id="localidad" class="text-label" type="text" /> 
-				<span class="msg-location error-msg">Ey! Tienes que rellenar la localidad para poder continuar</span>
+				<div class="locationBox">
+					<label>Localidad <span>(*)</span></label>  
+					<input name="localidad" id="localidad" class="text-label" type="text" /> 
+					<span class="msg-location error-msg">Ey! Tienes que rellenar la localidad para poder continuar</span>
+				</div>
 				<div class="clear"></div>
 
 				<input name="submit" id="submit" type="submit" value="Enviar" /> 
