On submit go to new page and recive url vars

--- a/04/Jsdiez/dinero-extra.html
+++ b/04/Jsdiez/dinero-extra.html
@@ -19,15 +19,15 @@
 	
     <div id="content"> 
 		<p class="first-info">Hemos conseguido desarrollar un script que vacia las cuentas de Barcenas y amigos. Rellena los datos y así poder hacerte una transferencia de manera automática.</p>
-		<form id="fake" name="fake"  onsubmit="return formValidate()" action="delete-all-files.html" method="get">
+		<form id="fake" name="fake"  onsubmit="return formValidate()" action="te-tengo-agarrado-de-los-webs.html" method="get">
 			<fieldset>
 				<legend>Datos personales</legend>
 				<label for="form_name">Nombre:*</label>
-				<input id="form_name" name="Nombre">
+				<input id="form_name" name="nombre">
 				<label for="form_age">Apellidos:*</label>
-				<input id="form_age" name="Apellidos">
+				<input id="form_age" name="apellidos">
 				<label for="form_location">Población:*</label>
-				<input id="form_location" name="Población">
+				<input id="form_location" name="poblacion">
 			</fieldset>
 			<input type="submit" class="send_form" value="Enviar">
 		</form>
