--- a/03/Pablo/asnwer.html
+++ b/03/Pablo/asnwer.html
@@ -27,7 +27,8 @@
 	<section>
 	
 		<article>
-			<h1> Formulario </h1>
+			<h1> Los siguientes datos ha sido enviados: </h1>
+			 <p>Esto es solo una comprobación de lo jodido que puede llegar a ser un formulario.</p>
 
 			<form action="answer.html " method="get"  autocomplete="on">
 				<input type="text" name="username" id="fullname"  required="required" placeholder="Tu nombre" title="Su nombre.. ¿No lo recuerdas?." /></p>
@@ -45,37 +46,10 @@
 	
 <script>
 
-	// Mostramos la capa del Mensaje Enviado
-	function sendMessage() {
-    jQuery('.message').animate({
-		opacity: '1'
-		});
-		
-	}
-	
-	// Cerrar capa de mensaje enviado
-	function closeMessage() {
-    jQuery('.message').animate({
-		opacity: '0'
-		});
-	}
-	
-	// Guardamos el valor del input fullname
-	function displayVals() {
-		  var fullname = $("input#fullname").val();
-		  $("div.message").html("<h3>Enhorabuena" +  fullname + "</h3> ");
-		  
-   }
+
 
 	jQuery(document).ready(function(e){
 	
-	     e.preventDefault();
-		
-		// EJecutamos la Capa para mostar el mensaje		
-		$("#sendform").click(sendMessage);  
-		
-		// Boton para cerrar el popup
-		$(".close").click(closeMessage);  
 	
     });  
 		
