--- a/04/Estefi/index.html
+++ b/04/Estefi/index.html
@@ -1,6 +1,7 @@
 ﻿<html>
 <head>
 	<title>Formularien con Jqueryen</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Life+Savers:400,700' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-2.0.0.js"></script>
