--- a/04/Estefi/respuesta.html
+++ b/04/Estefi/respuesta.html
@@ -1,12 +1,11 @@
 ﻿<html>
 <head>
 	<title>Respuesta Formularien con Jqueryen</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Life+Savers:400,700' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-2.0.0.js"></script>
 	<script src="js/answer.js"></script>
-
 </head>
 <body>
 
@@ -24,5 +23,3 @@
 	
 </body>
 </html>
-
-
