Añadir botón para volver al formulario desde la página de respuesta

--- a/04/Estefi/respuesta.html
+++ b/04/Estefi/respuesta.html
@@ -17,6 +17,7 @@
 		<ul>
 			<li></li>
 		</ul>
+		<a href="index.html" title="Volver" class="link-back">Volver</a>
 	</div>
 
 	<div id="footer">	</div>
