--- a/04/Pablo/asnwer.html
+++ b/04/Pablo/asnwer.html
@@ -34,14 +34,35 @@
 <script>
 			
 	/* Recogemos los datos de la URL  */
+	$.extend({
+		getUrlParam: function(){
+			var vars = [], hash;
+			var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+			for(var i = 0; i < hashes.length; i++)
+			{
+			  hash = hashes[i].split('=');
+			  vars.push(hash[0]);
+			  vars[hash[0]] = hash[1];
+			}
+			return vars;
+		  }
+	});	
 		
 	$(document).ready(function() {
 	
 		/* Creamos la variable y guardamos los datos */
-			
+		var name = $.getUrlParam()["name"];
+		var lastname = $.getUrlParam()["lastname"];
+		var city = $.getUrlParam()["city"];	
 	
-		/* Mostrar los datos recogidos en la variable y elminar espacios */
 		
+		/* Eliminamos los espacios y mostramos los datos recogidos en la variable */
+		name = name.replace('+', ' ');
+		lastname = lastname.replace('+', ' ');
+		city = city.replace('+', ' ');
+
+		$('#showinfo').html('<span>Nombre:</span> ' + name + '<br/> ' + '<span>Apellidos:</span> ' +  lastname + '<br/> ' +  '<span>Población:</span> ' + city);
+
 			
 		
 
