--- a/04/Laura/respuesta.html
+++ b/04/Laura/respuesta.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
-<html lang="es">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
 <head>
-<meta charset="UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="Tareas con Github">
-<title="Un formulario chulo en HTML5"></title>
+<title>Enhorabuena, no eres tonto</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
+<link href='http://fonts.googleapis.com/css?family=Marcellus+SC' rel='stylesheet' type='text/css'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script type="text/javascript" src="script.js"></script>
+<script>
+//hacemos aparecer el formulario y la caja de respuesta
+ $(document).ready(function(){
+        $("#bg-box").fadeIn(2000);
+        
+    });
+</script>
 
 
 </head>
