--- a/04/Jsdiez/te-tengo-agarrado-de-los-webs.html
+++ b/04/Jsdiez/te-tengo-agarrado-de-los-webs.html
@@ -13,7 +13,7 @@
       <h1>!Te engañé!</h1>     
     </div>
     <div id="content"> 
-	<p class="first-info">Se que vives en <span id="poblacion"></span> y voy a ir a por ti <span id="nombre"></span><p>
+	<p class="first-info">Sé que vives en <span id="poblacion"></span> y voy a ir a por ti <span id="nombre"></span><p>
 	<img src="img/freddy_krueger.jpg" />
     </div>
 	<script type='text/javascript' src="scripts/form-validate.js"></script>
