Eliminar los espacios en blanco
kata 2

--- a/05/madokita/index.html
+++ b/05/madokita/index.html
@@ -11,10 +11,18 @@
 		//Kata1
 		// declarar de variables
 			var kata1String = 'El tiempo que pasa uno riendo es tiempo que pasa con los dioses.'
+			console.log(kata1String); // Logs "El tiempo que pasa uno riendo es tiempo que pasa con los dioses."
 			console.log(kata1String.toLocaleUpperCase()); // Logs "EL TIEMPO QUE PASA UNO RIENDO ES TIEMPO QUE PASA CON LOS DIOSES."
+		
+		//Kata2
+		// declarar de variables
+			var kata2String = 'La lluvia sólo es un problema si no te quieres mojar.'
+			console.log(kata2String); // Logs "La lluvia sólo es un problema si no te quieres mojar."
+			console.log(kata2String.split(' ').join(''));// Logs "Lalluviasóloesunproblemasinotequieresmojar."
+		
 		//})
 		</script>
-	
+
 	
 </body>
 </html>
