extraer 10 caracteres desde 25º caracter del string
Kata 3

--- a/05/madokita/index.html
+++ b/05/madokita/index.html
@@ -19,6 +19,13 @@
 			var kata2String = 'La lluvia sólo es un problema si no te quieres mojar.'
 			console.log(kata2String); // Logs "La lluvia sólo es un problema si no te quieres mojar."
 			console.log(kata2String.split(' ').join(''));// Logs "Lalluviasóloesunproblemasinotequieresmojar."
+			
+		//Kata3
+		// declarar de variables
+			var kata3String = 'Las cosas no parecen tan terribles cuando tienes a un buen amigo.'
+
+			console.log(kata3String); // Logs "Las cosas no parecen tan terribles cuando tienes a un buen amigo."
+			console.log(kata3String.substr(25, 10)); // Logs desde 2ª letra, 10 letras juntas
 		
 		//})
 		</script>
