Encontrar un "t" y decir su posicion
kata 4. caso de que haya sólo una t. si hay más???

--- a/05/madokita/index.html
+++ b/05/madokita/index.html
@@ -27,6 +27,15 @@
 			console.log(kata3String); // Logs "Las cosas no parecen tan terribles cuando tienes a un buen amigo."
 			console.log(kata3String.substr(25, 10)); // Logs desde 2ª letra, 10 letras juntas
 		
+		//Kata4
+		// declarar de variables
+		//	var kata4String = '¡¿Por qué debo trabajar por TODO?! ¡Es como decirt que no lo merezco!'
+		//	console.log(kata4String); // Logs "¡¿Por qué debo trabajar por TODO?! ¡Es como decir que no lo merezco!"
+		// declarar de variables
+		//	var kata4index = kata4String.indexOf("t");
+		//	console.log(kata4index); // Logs posición de la letra "t"
+		
+
 		//})
 		</script>
 
