construir nueva cadena desde una
kata 5

--- a/05/madokita/index.html
+++ b/05/madokita/index.html
@@ -29,13 +29,19 @@
 		
 		//Kata4
 		// declarar de variables
-		//	var kata4String = '¡¿Por qué debo trabajar por TODO?! ¡Es como decirt que no lo merezco!'
-		//	console.log(kata4String); // Logs "¡¿Por qué debo trabajar por TODO?! ¡Es como decir que no lo merezco!"
+			var kata4String = '¡¿Por qué debo trabajar por TODO?! ¡Es como decirt que no lo merezco!'
+			console.log(kata4String); // Logs "¡¿Por qué debo trabajar por TODO?! ¡Es como decir que no lo merezco!"
 		// declarar de variables
-		//	var kata4index = kata4String.indexOf("t");
-		//	console.log(kata4index); // Logs posición de la letra "t"
+			var kata4index = kata4String.indexOf("t");
+			console.log(kata4index); // Logs posición de la letra "t"
 		
-
+		//Kata5
+		// declarar de variables
+			var kata5String = 'Cuando necesito pensar, salgo a pasear al bosque.'
+			console.log(kata5String); // Logs "¡¿Por qué debo trabajar por TODO?! ¡Es como decir que no lo merezco!"
+		// declarar de variables para construit nueva cadena
+			var new_kata5String = (kata5String.slice(23))
+			console.log(new_kata5String); // Logs desde 23º caracter
 		//})
 		</script>
 
